Quick fix for Add button behind footer, created more space at the end of page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -123,7 +123,7 @@ a.btn.btn-primary {
 #main-container {
 	margin: auto;
 	margin-top: 70px;
-	margin-bottom: 120px;
+	margin-bottom: 250px;
 }
 
 footer {
